<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_horizontal"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/instagram"
        app:layout_constraintStart_toStartOf="@+id/instagram"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/instagram"
        android:layout_width="257dp"
        android:layout_height="98dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="364dp"
        android:layout_height="47dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="129dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint"
        android:inputType="text"
        android:textColor="#F2101010"
        android:textColorHint="#6E6C6C"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagram" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="364dp"
        android:layout_height="47dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="#6E6C6C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_corners"
        android:text="@string/login"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:paddingTop="2dp"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/loginbutton"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:paddingTop="2dp"
        android:text="@string/pass1"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginbutton"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="31dp"
        android:layout_height="29dp"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginEnd="5dp"
        android:foregroundGravity="bottom"
        android:paddingTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="188dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:gravity="left"
        android:paddingTop="5dp"
        android:text="@string/fbook"
        android:textColor="#0D75CF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divA"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="175dp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/divB"
        app:layout_constraintStart_toEndOf="@+id/divA"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/divB"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="565dp"
        android:paddingTop="5dp"
        android:text="@string/account"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/divA"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="68dp"
        android:layout_height="28dp"
        android:layout_marginStart="245dp"
        android:layout_marginLeft="245dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:paddingTop="5dp"
        android:text="@string/signup"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/divB"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="691dp"
        android:layout_marginBottom="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="205dp"
        android:layout_height="0dp"
        android:paddingTop="5dp"
        android:text="@string/origin"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>